@@ -1,3 +1,8 @@
+2005-11-26  Johan Dahlin  <jdahlin@async.com.br>
+
+	* kiwi/ui/widgets/list.py (List.remove): Remove the iter from the
+	cache before remove the row.
+
 2005-11-24  Henrique Romano  <henrique@async.com.br>
 
 	reviewed by: Johan Dahlin  <jdahlin@async.com.br>
